plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
    id 'application'
    id "org.jetbrains.kotlin.plugin.serialization" version "1.6.20"
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile) {
    options.release.set(11)
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = "11"
    }
}

repositories {
    mavenCentral()
    maven() {
        url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/bootstrap/"
    }
    maven() {
        url "https://dl.google.com/dl/android/maven2"
    }
    maven() {
        url 'https://jitpack.io'
    }
    maven() {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

ext {
    kotlin_version = '1.6.20'
    aetherVersion = '1.1.0'
}

dependencies {
    //Intellij core
    implementation group: 'com.android.tools.external.com-intellij', name: 'intellij-core', version: '30.1.0-alpha10'
    implementation "org.jetbrains.kotlin:kotlin-stdlib"

    //Kootstrap
    implementation group: 'org.apache.maven', name: 'maven-model-builder', version: '3.3.9'
    implementation "org.apache.maven:maven-aether-provider:3.3.3"
    implementation "org.eclipse.aether:aether-api:1.1.0"
    implementation "org.eclipse.aether:aether-util:1.1.0"
    implementation "org.eclipse.aether:aether-impl:${aetherVersion}"
    implementation group: 'org.eclipse.aether', name: 'aether-connector-basic', version: "${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-file:${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-http:${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-wagon:${aetherVersion}"
    implementation "org.apache.maven:maven-aether-provider:3.3.3"
    implementation "org.apache.commons:commons-exec:1.3"

    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
    implementation "commons-io:commons-io:2.6"
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3'
//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'




    //Kotlin-libs
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "${kotlin_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-embeddable', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-script-runtime', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-annotations-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "${kotlin_version}"
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.3.3'

}

test {
    useJUnitPlatform()
}

task(runFuzzer, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.MainKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    def privateKeyPath = project.hasProperty('privateKeyPath') ? project.privateKeyPath : null
    def privateKeyPass = project.hasProperty('privateKeyPass') ? project.privateKeyPass : null
    environment('PRIVATE_KEY_PATH', privateKeyPath)
    environment('PRIVATE_KEY_PASS', privateKeyPass)
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
}

task(runInfFuzzer, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.runner.MainKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    def privateKeyPath = project.hasProperty('privateKeyPath') ? project.privateKeyPath : null
    def privateKeyPass = project.hasProperty('privateKeyPass') ? project.privateKeyPass : null
    environment('PRIVATE_KEY_PATH', privateKeyPath)
    environment('PRIVATE_KEY_PASS', privateKeyPass)
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
}


task(checkTemplates, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.test.TemplatesCheckerKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
}
